--- a/day2/day2-recipe.html
+++ b/day2/day2-recipe.html
@@ -172,7 +172,7 @@
   </header>
 
   <figure class="hero">
-    <img src="mid-luteal-meal.jpg" alt="Evening wind-down bowl with salmon, quinoa, and roasted vegetables">
+    <img src="mid-luteal-meal.png" alt="Evening wind-down bowl with salmon, quinoa, and roasted vegetables">
   </figure>
 
   <section class="card tone">
