added bottom back to hub

--- a/day3/day3-recipe.html
+++ b/day3/day3-recipe.html
@@ -215,6 +215,12 @@
     <button class="btn" onclick="window.print()">📄 Download PDF</button>
   </div>
 
+    <!-- Breadcrumb -->
+  <div class="back">
+    <a href="/rtr-hub.html">← Back to Hub</a>
+  </div>
+
+
   <footer>
     💬 Your body knows balance — it just needs you to listen.  
     <span class="poetic">Energy is not taken; it’s tuned. Balance what you give, trust what returns.</span>
