added back to hub buttons

--- a/day1/day1-recipe.html
+++ b/day1/day1-recipe.html
@@ -217,6 +217,9 @@
     <a class="btn" href="day1-cheatsheet.html">← Back to Cheat Sheet</a>
     <a class="btn" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
     <button class="btn" onclick="window.print()">📄 Download PDF</button>
+    <a class="btn ghost" href="/rtr-hub.html">
+    Back to Hub →
+  </a>
   </div>
 
   <footer>
