--- a/day4/day4-recipe.html
+++ b/day4/day4-recipe.html
@@ -212,6 +212,9 @@
     <a class="btn" href="day4-cheatsheet.html">← Back to Cheat Sheet</a>
     <a class="btn" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
     <button class="btn" onclick="window.print()">📄 Download PDF</button>
+    <a class="btn ghost" href="/rtr-hub.html">
+    Back to Hub →
+  </a>
   </div>
 
   <footer>
