--- a/day2/day2-journal.html
+++ b/day2/day2-journal.html
@@ -218,6 +218,9 @@ document.addEventListener("DOMContentLoaded", function() {
         <button type="submit" class="btn">Share with Diana + Get a Copy</button>
         <button type="button" onclick="window.print()" class="btn">📄 Keep Private Copy</button>
         <a class="btn" href="/day2/day2-cheatsheet.html">← Back to Cheat Sheet</a>
+        <a class="btn ghost" href="/rtr-hub.html">
+    Back to Hub →
+  </a>
       </div>
     </div>
   </form>
