--- a/day2/day2-cheatsheet.html
+++ b/day2/day2-cheatsheet.html
@@ -106,6 +106,10 @@
       <img src="https://cdn.artificialmomentum.com/logo.png" alt="Artificial Momentum logo">
     </div>
 
+        <!-- Breadcrumb -->
+    <a href="/rtr-hub.html" class="breadcrumb">← Back to Hub</a>
+
+
     <header>
   <h1>Day 2 — Feeling Edgy? PMT Isn’t the Problem</h1>
   <div class="sub">Your luteal phase is asking for rhythm, not resistance</div>
@@ -175,14 +179,15 @@
 </section>
 
 
+    <!-- CTA Row -->
     <div class="cta-row">
-  <a class="btn" href="day2-video.html">Watch Today’s Video</a>
-  <a class="btn ghost" href="day2-recipe.html">🍽 Recipe of the Day</a>
-  <a class="btn ghost" href="https://raw.artificialmomentum.com/day2/day2-journal">✒️ Journal Page</a>
-  <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
-  <a class="btn ghost" id="print-pdf">Download PDF</a>
-  <a class="btn" href="/rtr-hub.html">← Back to Raw to Reset Hub</a>
-</div>
+      <a class="btn" href="day2-video.html">Watch Today’s Video</a>
+      <a class="btn" href="day2-recipe.html">🍽 Recipe of the Day</a>
+      <a class="btn" href="/day2/day2-journal.html">✒️ Journal Page</a>
+      <a class="btn" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
+      <a class="btn" id="print-pdf">Download PDF</a>
+      <a class="btn" href="/rtr-hub.html">← Back to Hub</a>
+    </div>
 
 
     <footer>
