--- a/day5/day5-cheatsheet.html
+++ b/day5/day5-cheatsheet.html
@@ -104,6 +104,10 @@
       <img src="https://cdn.artificialmomentum.com/logo.png" alt="Artificial Momentum logo">
     </div>
 
+        <!-- Breadcrumb -->
+    <a href="/rtr-hub.html" class="breadcrumb">← Back to Hub</a>
+
+
     <header>
   <h1>Day 5 — Anchoring Your Rhythm — The 5-Day Capstone</h1>
   <div class="sub">You’ve felt what happens when you stop fighting and start listening.</div>
@@ -187,14 +191,15 @@
 
 </section>
 
-<div class="cta-row">
-  <a class="btn" href="day1-video.html">Watch Today’s Video</a>
-  <a class="btn ghost" href="day1-recipe.html">🍽 Recipe of the Day</a>
-  <a class="btn ghost" href="https://raw.artificialmomentum.com/day1/day1-journal">✒️ Journal Page</a>
-  <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
-  <a class="btn ghost" id="print-pdf">Download PDF</a>
-  <a class="btn" href="/rtr-hub.html">← Back to Raw to Reset Hub</a>
-</div>
+    <!-- CTA Row -->
+    <div class="cta-row">
+      <a class="btn" href="day5-video.html">Watch Today’s Video</a>
+      <a class="btn" href="day5-recipe.html">🍽 Recipe of the Day</a>
+      <a class="btn" href="/day5/day5-journal.html">✒️ Journal Page</a>
+      <a class="btn" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
+      <a class="btn" id="print-pdf">Download PDF</a>
+      <a class="btn" href="/rtr-hub.html">← Back to Hub</a>
+    </div>
 
 <!-- Next Step Card -->
 <section class="card tone">
