--- a/day3/day3-cheatsheet.html
+++ b/day3/day3-cheatsheet.html
@@ -104,6 +104,10 @@
       <img src="https://cdn.artificialmomentum.com/logo.png" alt="Artificial Momentum logo">
     </div>
 
+        <!-- Breadcrumb -->
+    <a href="/rtr-hub.html" class="breadcrumb">← Back to Hub</a>
+
+
     <header>
   <h1>Day 3 — Bloat, Burnout, and the Bullsh*t We’ve Normalized</h1>
   <div class="sub">You’re not lazy — you’re low on fuel.</div>
@@ -175,14 +179,15 @@
 
 
 
+    <!-- CTA Row -->
     <div class="cta-row">
-  <a class="btn" href="day3-video.html">Watch Today’s Video</a>
-  <a class="btn ghost" href="day3-recipe.html">🍽 Recipe of the Day</a>
-  <a class="btn ghost" href="https://raw.artificialmomentum.com/day3/day3-journal">✒️ Journal Page</a>
-  <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
-  <a class="btn ghost" id="print-pdf">Download PDF</a>
-  <a class="btn" href="/rtr-hub.html">← Back to Raw to Reset Hub</a>
-</div>
+      <a class="btn" href="day3-video.html">Watch Today’s Video</a>
+      <a class="btn" href="day3-recipe.html">🍽 Recipe of the Day</a>
+      <a class="btn" href="/day3/day3-journal.html">✒️ Journal Page</a>
+      <a class="btn" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
+      <a class="btn" id="print-pdf">Download PDF</a>
+      <a class="btn" href="/rtr-hub.html">← Back to Hub</a>
+    </div>
 
 
     <footer>
