--- a/day4/day4-cheatsheet.html
+++ b/day4/day4-cheatsheet.html
@@ -104,6 +104,10 @@
       <img src="https://cdn.artificialmomentum.com/logo.png" alt="Artificial Momentum logo">
     </div>
 
+        <!-- Breadcrumb -->
+    <a href="/rtr-hub.html" class="breadcrumb">← Back to Hub</a>
+
+
     <header>
   <h1>Day 4 — Hormones Shifting Again? Foggy? Moody?<br>Good. That’s Your Signal.</h1>
   <div class="sub">This isn’t a crash — it’s data you can use.</div>
@@ -186,14 +190,15 @@
 </section>
 
 
+    <!-- CTA Row -->
     <div class="cta-row">
-  <a class="btn" href="day4-video.html">Watch Today’s Video</a>
-  <a class="btn ghost" href="day4-recipe.html">🍽 Recipe of the Day</a>
-  <a class="btn ghost" href="https://raw.artificialmomentum.com/day4/day4-journal">✒️ Journal Page</a>
-  <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
-  <a class="btn ghost" id="print-pdf">Download PDF</a>
-  <a class="btn" href="/rtr-hub.html">← Back to Raw to Reset Hub</a>
-</div>
+      <a class="btn" href="day4-video.html">Watch Today’s Video</a>
+      <a class="btn" href="day4-recipe.html">🍽 Recipe of the Day</a>
+      <a class="btn" href="/day4/day4-journal.html">✒️ Journal Page</a>
+      <a class="btn" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
+      <a class="btn" id="print-pdf">Download PDF</a>
+      <a class="btn" href="/rtr-hub.html">← Back to Hub</a>
+    </div>
 
 
     <footer>
