--- a/day2/day2-cheatsheet.html
+++ b/day2/day2-cheatsheet.html
@@ -126,8 +126,10 @@
       <img src="https://cdn.artificialmomentum.com/logo.png" alt="Artificial Momentum logo">
     </div>
 
+
         <!-- Breadcrumb -->
     <a href="/rtr-hub.html" class="breadcrumb">← Back to Hub</a>
+</div>
 
 
     <header>
