--- a/day2/day2-cheatsheet.html
+++ b/day2/day2-cheatsheet.html
@@ -98,6 +98,23 @@
   box-shadow:0 4px 12px rgba(252,139,115,0.35);
 }
 
+/* ---------- Breadcrumb ---------- */
+.breadcrumb {
+  display:block;
+  margin:4px 0 18px 0;
+  color:#666;
+  opacity:0.7;
+  font-size:0.95rem;
+  text-decoration:none;
+  transition:color .2s ease, opacity .2s ease;
+}
+
+.breadcrumb:hover {
+  color:var(--brand);
+  opacity:1;
+}
+
+
     /* ---------- Footer ---------- */
     footer{text-align:center;font-size:1.05rem;color:#0D0D0E;margin-top:48px;margin-bottom:60px;
       font-weight:600;line-height:1.7;animation:slideUpFade 1.4s ease-out .3s forwards;opacity:0;}
